--- a/src/pages/landing/landing.module.css
+++ b/src/pages/landing/landing.module.css
@@ -61,7 +61,9 @@ body {
   font-weight: 700;
 }
 .topSection {
+  background-color: #c7f2e8;
   background-image: url('/img/hero.jpg');
+  background-position: center center;
 }
 .topContent {
   background-color: transparent;
@@ -160,6 +162,7 @@ div#box div {
   float: right;
   padding: 10px;
   color: #fff;
+  border-radius: 50%;
 }
 .clear {
   clear: both;
@@ -170,6 +173,10 @@ div#box div {
   height: 300px;
   border-radius: 50%;
   margin: 0 auto;
+}
+button img {
+    width: 100% !important;
+    margin: 0 !important;
 }
 
 @media (min-width: 1200px) and (max-width: 1399.98px) {
@@ -236,10 +243,10 @@ div#box div {
     display: none !important;
   }
   .footerContainer img {
-    width: 50%;
     float: none;
     margin: 0 auto;
     display: block;
+    width: 100%;
   }
   .footerContainer form {
     width: 100%;
@@ -265,8 +272,8 @@ div#box div {
 @media (min-width: 320px) and (max-width: 575.98px) {
   .container {
     max-width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 0;
+    padding-right: 0;
   }
   .footerContainer {
     max-width: 100%;
@@ -279,6 +286,17 @@ div#box div {
   }
   .logo {
     padding-top: 50px;
+  }
+  .productOverview {
+    background-image: url('/img/hero.jpg');
+    background-position: center center;
+    border-top: 1px solid #5F9F9A;
+    border-bottom: 1px solid #5F9F9A;
+  }
+  .topSection {
+    background-color: #c7f2e8;
+    background-image: none;
+    background-position: center center;
   }
   .mainTitle {
     padding-top: 50px;
@@ -295,10 +313,10 @@ div#box div {
     background-image: url("/img/footer.jpg");
   } */
   .footerContainer img {
-    width: 50%;
     float: none;
     margin: 0 auto;
     display: block;
+    width: 100%;
   }
   .footerContainer form {
     width: 100%;
